<resources>
    <string name="GoogleServicesApiKey" translatable="false">AIzaSyASc3J5A1A3u6mmW7MTZfqBbknGuv1zU2U</string>
    <string name="Loading">Loading</string>
    <string name="Generic_Error">An Error Occurred</string>
    <string name="Generic_Network_Error">Please check your internet connection</string>
    <string name="Generic_Err">Error</string>
    <string name="Generic_Close">Close</string>
    <string name="Generic_Continue">Continue</string>
    <string name="continue_home_screen">Continue to Home Screen</string>
    <string name="Generic_Skip">Skip</string>
    <string name="Generic_Next">Next</string>
    <string name="Generic_Continue_Without_sign_in">Continue without sign up</string>
    <string name="Generic_Send">Send</string>
    <string name="Generic_Continue_2">Continue</string>
    <string name="Generic_Continue_3">Enter</string>
    <string name="Generic_Ok">OK</string>
    <string name="Maps_No_Exist">Navigation application or browser can not be find.</string>
    <string name="generic_language">en</string>
    <string name="check_information">Please check your information</string>
    <string name="flexiCarpool">flexiCarpool</string>
    <string name="scanQR">Scan QR to validate your trips as a rider</string>
    <string name="myQR">Validate your riders when you are the carpool driver</string>
    <string name="route_planning_in_process">Route planning in process…</string>
    <string name="planning_in_process">Planning in process…</string>
    <string name="start_route">You can start using the route %1$s on your next trip.</string>
    <string name="send_new_feedback">Send New Feedback</string>
    <string name="view_my_request">View My Requests</string>
    <string name="select_or_request">You can select one of the alternatives listed above or you can request a pickup closer to your home address.</string>
    <string name="request_a_nearby_stop">Request a Nearby Stop</string>
    <string name="need_stop_location">Do you need a stop close to your location?</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="splash_version_dialog_title">Version Control</string>
    <string name="splash_version_dialog_subtitle">Please be sure to install the latest version in order to use the application.</string>
    <string name="generic_upgrade">Upgrade</string>
    <string name="splash_version_check_failed">Version check failed.</string>
    <string name="generic_error_title">Error</string>
    <string name="generic_retry">Try Again</string>
    <string name="success_registration_route">You are now registered to %1$s, you can start using it by the next trip.</string>
    <string name="welcome_flexigo">Welcome to Flexigo!</string>
    <string name="welcome_flexigo_hint">Enter your email and password</string>
    <string name="signup_text">Please create your account with your name, email, and unique password.</string>
    <string name="enter_verification_code">Please enter the verification code sent to the email address below:</string>
    <string name="enter_sms_code">Please enter the verification code sent to the phone number:</string>
    <string name="add_your_phone">Please add your phone number so that you can communicate with other carpoolers. \n\nSMS code will be sent to verify your number.</string>
    <string name="please_select_campus">We\'ll optimize the transportation options available to you according to this selection.</string>
    <string name="view_riders">View riders/drivers around your location and swipe right the ones with whom you\'d be willing to carpool, swipe left the ones you wouldn\'t.</string>
    <string name="view_riders_desc">When there are matching requests, we will notify both parties.</string>
    <string name="enter_company_code">Please enter the code provided by your company.</string>
    <string name="scan_qr_code_warning">You can also add the code by scanning\n a QR code, if provided.</string>
    <string name="signup">Sign up</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="surname">Surname</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="password_again">Password Again</string>
    <string name="phone">Phone</string>
    <string name="company">Company</string>
    <string name="address">Address</string>
    <string name="e_mail_error">E-mail address is incorrect</string>
    <string name="password_error">Password is incorrect</string>
    <string name="login">Sign in</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="forgot_password_underline"><u>I forgot my password</u></string>
    <string name="forgot_password_info">Reset your password by entering your email address.</string>
    <string name="button_forgot_password">Send Reset Mail</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="greetings">Greetings</string>
    <string name="notification">Notifications</string>
    <string name="show_less">Show less</string>
    <string name="message">Messages</string>
    <string name="shuttle_route">Shuttle Route</string>
    <string name="shuttle_menu_shuttle">Shuttle</string>
    <string name="shuttle_menu_information">Calendar</string>
    <string name="shuttle_menu_qr_code">QR</string>
    <string name="shuttle_menu_my_trips">My Trips</string>
    <string name="search_route">Search Route</string>
    <string name="will_call">%1$s will be called.</string>
    <string name="settings">Settings</string>
    <string name="shuttle_information_text">You can remove ticks from times which you don\'t want to use the service.</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="overtime">Overtime</string>
    <string name="scan_qr_code">Scan Qr code</string>
    <string name="scan_qr">Scan Qr code</string>
    <string name="read_qr_code">Read QR code</string>
    <string name="read_qr_code_text">Your riders should scan your QR to validate your trip together.</string>
    <string name="my_qr">My QR</string>
    <string name="open_camera_automatically">Open the camera when you enter the page</string>
    <string name="scan_qr_code_vehicle">Scan the QR code on the vehicle.</string>
    <string name="success">Successful</string>
    <string name="show_request_screen">You can track your request on the flexiRide My Requests screen.</string>
    <string name="qr_code_successfull">QR code reading successful</string>
    <string name="shuttle_qr_success_message">Your boarding record has been received.</string>
    <string name="commute_text">Using a shared mode of commute could save <b>106 trees per year!</b></string>
    <string name="commute_text_warning">The numbers above are based on calculations by the flexigoCommuteAnalysis engine for the commute hours you have indicated. You may find more accurate information on related module screens.</string>
    <string name="permission_call_phone_title">Phone Call Permission</string>
    <string name="permission_call_phone_subtitle">You must allow call phone permission in settings to perform this operation</string>
    <string name="permission_camera_title">Camera Permission</string>
    <string name="permission_camera_subtitle">You must allow camera permission in settings to perform this operation</string>
    <string name="no_camera_permission">No camera permission</string>
    <string name="permission_location_title">Location Permission</string>
    <string name="permission_location_subtitle">You must allow location permission in settings to perform this operation</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_company_info">Company Info</string>
    <string name="menu_addresses">Addresses</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_highlight">User Guide</string>
    <string name="menu_questionnaire">Satisfaction Survey</string>
    <string name="menu_driving_license">Driver License Info</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_home_address">Home Address</string>
    <string name="phone_number_not_valid">Phone number is not valid.</string>
    <string name="dialog_message_edit_profile_success">Phone number is updated successfully.</string>
    <string name="dialog_message_change_password_success">Password is updated successfully.</string>
    <string name="dialog_message_change_address_success">Address is updated successfully.</string>
    <string name="dialog_message_add_ticket_success">Your request has been successfully received. Thanks for your feedback.</string>
    <string name="error_password_empty">You must fill all the fields completely.</string>
    <string name="error_old_new_password_not_match">Password fields do not match.</string>
    <string name="search_maps">Search maps</string>
    <string name="search_location">Search location</string>
    <string name="confirm_address">Confirm Address</string>
    <string name="save_address">Save Address</string>
    <string name="view_options">View Options</string>
    <string name="settings_sound_effect">Sound Effects</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_email_notifications">E-Mail Notifications</string>
    <string name="settings_show_phone">Show Phone</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="security">Security</string>
    <string name="flexigo" translatable="false">Flexigo</string>
    <string name="about_application">About</string>
    <string name="version">Version:</string>
    <string name="flexigo_vektor">Flexigo is an <u><font color="#ff4e12">Vektor Mobility</font></u> brand</string>
    <string name="logout">Log out</string>
    <string name="logout_message">Are you sure you would like to log out?</string>
    <string name="comments_title">Feedback</string>
    <string name="comment_add_text">Enter new  comment/complaint</string>
    <string name="category">Category</string>
    <string name="demand_type">Request Type</string>
    <string name="demand_date">Request date</string>
    <string name="location">Location</string>
    <string name="location2">Location</string>
    <string name="route">Route</string>
    <string name="select">Select</string>
    <string name="select1">View</string>
    <string name="select2">Continue</string>
    <string name="select3">Select</string>
    <string name="cancel">Cancel</string>
    <string name="company_code">Company Code</string>
    <string name="login_sign_up">Don\'t have an account yet?  <u><font color="#51df7d">Sign up</font></u></string>
    <string name="sign_up_login">Already have an account?  <u><font color="#51df7d">Login</font></u></string>
    <string name="password_must_include">Password must include:</string>
    <string name="least_character">At least 6 characters</string>
    <string name="least_character_capital">At least one capital letter</string>
    <string name="least_character_small">At least one small letter</string>
    <string name="least_character_digit">At least one number</string>
    <string name="no_spaces">No spaces</string>
    <string name="odometer_title_start">Start Km</string>
    <string name="odometer_text_start">Enter the km value of car when you get the car</string>
    <string name="odometer_hint">Km Value</string>
    <string name="odometer_error">Please fill valid odometer value</string>
    <string name="remember_me">Remember me</string>
</resources>