<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:padding="20dp"
    android:background="@drawable/bg_white_rounded_triangle">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/password_must_include"
        android:textSize="14sp"
        android:textColor="@color/darkNavyBlue"
        android:textAppearance="@style/TextRegular"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_warning1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_title"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/least_character"
        android:textSize="14sp"
        android:textColor="@color/darkNavyBlue"
        android:textAppearance="@style/TextRegular"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_warning2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_warning1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/least_character_capital"
        android:textSize="14sp"
        android:textColor="@color/darkNavyBlue"
        android:textAppearance="@style/TextRegular"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_warning3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_warning2"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/no_spaces"
        android:textSize="14sp"
        android:textColor="@color/darkNavyBlue"
        android:textAppearance="@style/TextRegular"/>


</androidx.constraintlayout.widget.ConstraintLayout>