<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.vektortelekom.android.vservice.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.vektortelekom.android.vservice.ui.login.LoginActivity"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="42dp"
        android:background="@color/mainBackgroundColor">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/welcome_flexigo"
            android:textSize="24sp"
            android:textAppearance="@style/TextBold"
            android:textColor="@color/darkNavyBlue"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_welcome_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_welcome_title"
            android:text="@string/welcome_flexigo_hint"
            android:textSize="16sp"
            android:textAppearance="@style/TextRegular"
            android:textColor="@color/steel"/>

        <View
            android:id="@+id/line_title"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/text_welcome_hint"
            android:layout_marginTop="13dp"
            android:background="@color/paleGrey2"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_email"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line_title"
            android:layout_marginTop="36dp"
            app:endIconMode="clear_text"
            android:hint="@string/e_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.loginEmail}"
                android:inputType="textEmailAddress"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_email"
            android:layout_marginTop="20dp"
            app:endIconMode="clear_text"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.loginPassword}"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/check_box_remember_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
            android:textAppearance="@style/TextRegular"
            android:text="@string/remember_me"
            android:checked="@={viewModel.isRememberMe}"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_forgot_password"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/check_box_remember_me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:text="@string/forgot_password_underline"
            app:cornerRadius="4dp"
            android:textSize="14sp"
            android:backgroundTint="@color/colorWhite"
            app:rippleColor="@color/colorPrimary"
            android:textColor="@color/steel"
            android:textAppearance="@style/TextRegular"
            android:elevation="0dp"
            android:textAllCaps="false"
            app:strokeWidth="0dp"
            app:strokeColor="@null"
            android:letterSpacing="0"
            android:onClick="@{viewModel.navigator::showForgotPasswordFragment}"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_in"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/button_forgot_password"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/steel"
            android:background="@null"
            android:textAppearance="@style/TextMedium"
            app:layout_constraintTop_toBottomOf="@id/button_sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:onClick="@{viewModel::register}"
            android:text="@string/login_sign_up"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>