<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@color/mainBackgroundColor">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/company_code"
            android:layout_marginTop="40dp"
            android:textSize="24sp"
            android:textAppearance="@style/TextSemibold"
            android:textColor="@color/darkNavyBlue"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_welcome_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_welcome_title"
            android:text="@string/enter_company_code"
            android:textSize="16sp"
            android:textAppearance="@style/TextRegular"
            android:textColor="@color/steel"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="4534"
            android:letterSpacing="0.3"
            android:textAlignment="center"
            android:textSize="18sp"
            android:inputType="number"
            android:layout_marginTop="20dp"
            android:padding="12dp"
            android:textAppearance="@style/TextMedium"
            android:textColor="@color/darkNavyBlue"
            android:background="@drawable/background_edittext"
            app:layout_constraintTop_toBottomOf="@+id/text_welcome_hint"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_qr_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/edittext_code"
            android:text="@string/scan_qr_code_warning"
            android:textSize="14sp"
            android:textAppearance="@style/TextRegular"
            android:textColor="@color/darkNavyBlue"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_continue"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_qr_code"
            android:layout_marginTop="30dp"
            android:text="@string/Generic_Continue"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_signin_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/steel"
            android:textAppearance="@style/TextMedium"
            app:layout_constraintTop_toBottomOf="@id/button_continue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:paddingBottom="10dp"
            android:text="@string/sign_up_login"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</layout>