<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="0dp"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/colorWhite">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="17dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:gravity="center"
            android:textAppearance="@style/TextSemibold"
            android:textSize="18sp"
            android:textColor="@color/darkNavyBlue"
            tools:text="@string/odometer_title_start"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_title"
            android:layout_marginTop="9dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:gravity="center"
            android:textAppearance="@style/TextRegular"
            android:textSize="14sp"
            android:textColor="@color/steel"
            tools:text="@string/odometer_text_start"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_km"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_text_1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/odometer_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_km"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_km"
            android:textAppearance="@style/TextRegular"
            android:textSize="14sp"
            android:textColor="@color/watermelon"
            android:text="@string/odometer_error"
            android:visibility="gone"/>
        

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_error"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/layout_ok_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_cancel"
                    style="@style/PrimaryButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetBottom="0dp"
                    app:backgroundTint="@color/paleGrey2"
                    android:textColor="@color/darkNavyBlue"
                    app:cornerRadius="0dp"
                    android:text="@string/cancel"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_submit_odometer"
                    style="@style/PrimaryButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetBottom="0dp"
                    app:backgroundTint="@color/purpley"
                    app:cornerRadius="0dp"
                    android:text="@string/Generic_Continue_3"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>