<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/textview_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/password_must_include"
    android:textAppearance="@style/TextRegular"
    android:textColor="@color/darkNavyBlue"
    android:textSize="14sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/imageview_1"
    android:layout_width="20dp"
    android:layout_height="20dp"
    android:layout_marginTop="20dp"
    android:src="@drawable/ic_check_icon_grey"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textview_title" />

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/textview_warning1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="20dp"
    android:text="@string/least_character"
    android:textAppearance="@style/TextRegular"
    android:textColor="@color/darkNavyBlue"
    android:textSize="14sp"
    app:layout_constraintStart_toEndOf="@+id/imageview_1"
    app:layout_constraintTop_toBottomOf="@+id/textview_title" />

<androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/imageview_2"
    android:layout_width="20dp"
    android:layout_height="20dp"
    android:layout_marginTop="10dp"
    android:src="@drawable/ic_check_icon_grey"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textview_warning1" />

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/textview_warning2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:text="@string/least_character_capital"
    android:textAppearance="@style/TextRegular"
    android:textColor="@color/darkNavyBlue"
    android:textSize="14sp"
    app:layout_constraintStart_toEndOf="@+id/imageview_2"
    app:layout_constraintTop_toBottomOf="@+id/textview_warning1" />

<androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/imageview_3"
    android:layout_width="20dp"
    android:layout_height="20dp"
    android:layout_marginTop="10dp"
    android:src="@drawable/ic_check_icon_grey"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textview_warning2" />

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/textview_warning3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:text="@string/least_character_small"
    android:textAppearance="@style/TextRegular"
    android:textColor="@color/darkNavyBlue"
    android:textSize="14sp"
    app:layout_constraintStart_toEndOf="@+id/imageview_2"
    app:layout_constraintTop_toBottomOf="@+id/textview_warning2" />

<androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/imageview_4"
    android:layout_width="20dp"
    android:layout_height="20dp"
    android:layout_marginTop="10dp"
    android:src="@drawable/ic_check_icon_grey"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textview_warning3" />

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/textview_warning4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:paddingBottom="10dp"
    android:text="@string/least_character_digit"
    android:textAppearance="@style/TextRegular"
    android:textColor="@color/darkNavyBlue"
    android:textSize="14sp"
    app:layout_constraintStart_toEndOf="@+id/imageview_3"
    app:layout_constraintTop_toBottomOf="@+id/textview_warning3" />

</androidx.constraintlayout.widget.ConstraintLayout>